<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    android:visibility="invisible"
    tools:context=".MainActivity"
    tools:ignore="ExtraText,InvalidId">

    <EditText
        style="@style/loginElement"
        android:id="@+id/edit_text_username"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/colorText"
        android:backgroundTint="@color/colorText"/>

    <EditText
        style="@style/loginElement"
        android:id="@+id/edit_text_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/colorText"
        android:backgroundTint="@color/colorText"/>

    <Button
        style="@style/loginElement"
        android:id="@+id/button_confirm"
        android:enabled="false"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>

